--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
----
-sudo: required
-services: docker
-addons:
-  apt:
-    packages:
-    - docker-ce
+import:
+- logstash-plugins/.ci:travis/travis.yml@1.x
+
 env:
   - INTEGRATION=false ELASTIC_STACK_VERSION=5.x
   - INTEGRATION=false ELASTIC_STACK_VERSION=6.x
@@ -14,5 +10,3 @@ env:
   - INTEGRATION=true ELASTIC_STACK_VERSION=7.x SNAPSHOT=true
   - INTEGRATION=true ELASTIC_STACK_VERSION=8.x SNAPSHOT=true
   - INTEGRATION=true ELASTIC_STACK_VERSION=7.x
-install: ci/docker-setup.sh
-script: ci/docker-run.sh
