CI: refactor ES setup + prepare ELASTIC_PASSWORD

--- a/.ci/docker-compose.override.yml
+++ b/.ci/docker-compose.override.yml
@@ -8,6 +8,7 @@ services:
         - INTEGRATION=${INTEGRATION:-false}
         - SECURE_INTEGRATION=${SECURE_INTEGRATION:-false}
         - ELASTIC_STACK_VERSION=$ELASTIC_STACK_VERSION
+        - ELASTIC_PASSWORD=$ELASTIC_PASSWORD
   elasticsearch:
     build:
       context: ../
@@ -16,7 +17,10 @@ services:
         - ELASTIC_STACK_VERSION=$ELASTIC_STACK_VERSION
         - INTEGRATION=${INTEGRATION:-false}
         - SECURE_INTEGRATION=${SECURE_INTEGRATION:-false}
-    command: /usr/share/elasticsearch/elasticsearch-run.sh
+    environment:
+      - ELASTIC_PASSWORD=$ELASTIC_PASSWORD # not supported in ES image 6.8
+      - discovery.type=single-node
+      - ES_JAVA_OPTS=-Xms250m -Xmx1000m
     tty: true
     ports:
       - "9200:9200"
