CI: try setup with ES password (should fail)

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ env:
   - INTEGRATION=false ELASTIC_STACK_VERSION=7.x
   - INTEGRATION=true ELASTIC_STACK_VERSION=6.x
   - INTEGRATION=true ELASTIC_STACK_VERSION=7.x
+  - INTEGRATION=true ELASTIC_STACK_VERSION=7.x ELASTIC_PASSWORD=password
   - INTEGRATION=true ELASTIC_STACK_VERSION=7.x SNAPSHOT=true
   - INTEGRATION=true ELASTIC_STACK_VERSION=8.x SNAPSHOT=true
-  - INTEGRATION=true ELASTIC_STACK_VERSION=7.x
+  - INTEGRATION=true ELASTIC_STACK_VERSION=7.10.2 ELASTIC_PASSWORD=password
+  - INTEGRATION=true ELASTIC_STACK_VERSION=7.14.0 ELASTIC_PASSWORD=password
