CI: pass down ELASTIC_SECURITY_ENABLED to LS

--- a/.ci/docker-compose.override.yml
+++ b/.ci/docker-compose.override.yml
@@ -8,6 +8,7 @@ services:
         - INTEGRATION=${INTEGRATION:-false}
         - SECURE_INTEGRATION=${SECURE_INTEGRATION:-false}
         - ELASTIC_STACK_VERSION=$ELASTIC_STACK_VERSION
+        - ELASTIC_SECURITY_ENABLED=$ELASTIC_SECURITY_ENABLED
         - ELASTIC_PASSWORD=$ELASTIC_PASSWORD
   elasticsearch:
     build:
