--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ import:
 env:
   - INTEGRATION=false ELASTIC_STACK_VERSION=6.x
   - INTEGRATION=false ELASTIC_STACK_VERSION=7.x
-  - INTEGRATION=true ELASTIC_STACK_VERSION=6.x
+  - INTEGRATION=true ELASTIC_STACK_VERSION=6.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
   - INTEGRATION=true ELASTIC_STACK_VERSION=7.x
   - INTEGRATION=true ELASTIC_STACK_VERSION=7.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
   - INTEGRATION=true ELASTIC_STACK_VERSION=7.x SNAPSHOT=true
