--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ import:
 
 env:
   - INTEGRATION=false ELASTIC_STACK_VERSION=7.x
+  - INTEGRATION=false ELASTIC_STACK_VERSION=8.x
   - INTEGRATION=true ELASTIC_STACK_VERSION=7.x
   - INTEGRATION=true ELASTIC_STACK_VERSION=7.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
+  - INTEGRATION=true ELASTIC_STACK_VERSION=7.14.0 ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
+  - SECURE_INTEGRATION=true INTEGRATION=true ELASTIC_STACK_VERSION=7.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
+  - SECURE_INTEGRATION=true INTEGRATION=true ELASTIC_STACK_VERSION=7.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true ES_SSL_SUPPORTED_PROTOCOLS=TLSv1.3
   - INTEGRATION=true ELASTIC_STACK_VERSION=7.x SNAPSHOT=true
   - INTEGRATION=true ELASTIC_STACK_VERSION=8.x SNAPSHOT=true
-  - INTEGRATION=true ELASTIC_STACK_VERSION=7.14.0 ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
