keystore: add tests, downgrade log message to debug

--- a/spec/filters/fixtures/generate_test_certs.openssl.cnf
+++ b/spec/filters/fixtures/generate_test_certs.openssl.cnf
@@ -35,3 +35,13 @@ authorityKeyIdentifier = keyid,issuer:always
 keyUsage = critical, digitalSignature, keyEncipherment
 extendedKeyUsage = serverAuth
 subjectAltName = "DNS:elasticsearch"
+
+[ logstash_client ]
+basicConstraints = CA:FALSE
+nsCertType = client, email
+nsComment = "OpenSSL Generated Client Certificate"
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid,issuer
+keyUsage = critical, nonRepudiation, digitalSignature, keyEncipherment
+extendedKeyUsage = clientAuth, emailProtection
+subjectAltName = "DNS:logstash, DNS:localhost, IP:127.0.0.1"
