--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,19 @@
 import:
 - logstash-plugins/.ci:travis/travis.yml@1.x
 
-env:
-  - INTEGRATION=false ELASTIC_STACK_VERSION=7.x
-  - INTEGRATION=false ELASTIC_STACK_VERSION=8.x
-  - INTEGRATION=false ELASTIC_STACK_VERSION=7.16.3 MANTICORE_VERSION=0.7.1 ELASTICSEARCH_VERSION=7.15.0
-  - INTEGRATION=true ELASTIC_STACK_VERSION=7.x
-  - INTEGRATION=true ELASTIC_STACK_VERSION=7.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
-  - INTEGRATION=true ELASTIC_STACK_VERSION=8.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
-  - INTEGRATION=true ELASTIC_STACK_VERSION=7.14.0 ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
-  - SECURE_INTEGRATION=true INTEGRATION=true ELASTIC_STACK_VERSION=7.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true LOG_LEVEL=info
-  - SECURE_INTEGRATION=true INTEGRATION=true ELASTIC_STACK_VERSION=7.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true ES_SSL_SUPPORTED_PROTOCOLS=TLSv1.3
-  - SECURE_INTEGRATION=true INTEGRATION=true ELASTIC_STACK_VERSION=7.14.2 MANTICORE_VERSION=0.7.1 ELASTICSEARCH_VERSION=7.14.1 ELASTIC_SECURITY_ENABLED=true LOG_LEVEL=info
-  - SECURE_INTEGRATION=true INTEGRATION=true ELASTIC_STACK_VERSION=8.x ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true ES_SSL_SUPPORTED_PROTOCOLS=TLSv1.3
-  - INTEGRATION=true ELASTIC_STACK_VERSION=7.x SNAPSHOT=true LOG_LEVEL=info
-  - INTEGRATION=true ELASTIC_STACK_VERSION=8.x SNAPSHOT=true LOG_LEVEL=info
+jobs:
+  include:
+    - stage: "Integration Tests"
+      env: INTEGRATION=true SNAPSHOT=true LOG_LEVEL=info ELASTIC_STACK_VERSION=7.current
+    - env: INTEGRATION=true SNAPSHOT=true LOG_LEVEL=info ELASTIC_STACK_VERSION=8.previous
+    - env: INTEGRATION=true SNAPSHOT=true LOG_LEVEL=info ELASTIC_STACK_VERSION=8.current
+    - env: INTEGRATION=true SNAPSHOT=true LOG_LEVEL=info ELASTIC_STACK_VERSION=8.next
+    - env: INTEGRATION=true SNAPSHOT=true LOG_LEVEL=info ELASTIC_STACK_VERSION=8.future
+    - env: INTEGRATION=false ELASTIC_STACK_VERSION=7.16.3 MANTICORE_VERSION=0.7.1 ELASTICSEARCH_VERSION=7.15.0
+    - stage: "Secure Integration Tests"
+      env: SECURE_INTEGRATION=true INTEGRATION=true LOG_LEVEL=info ELASTIC_STACK_VERSION=8.current SNAPSHOT=true
+    - env: SECURE_INTEGRATION=true INTEGRATION=true LOG_LEVEL=info ELASTIC_STACK_VERSION=7.current
+    - env: SECURE_INTEGRATION=true INTEGRATION=true LOG_LEVEL=info ELASTIC_STACK_VERSION=7.current ES_SSL_KEY_INVALID=true
+    - env: SECURE_INTEGRATION=true INTEGRATION=true LOG_LEVEL=info ELASTIC_STACK_VERSION=7.current ES_SSL_SUPPORTED_PROTOCOLS=TLSv1.3
+    - env: INTEGRATION=true SNAPSHOT=true LOG_LEVEL=info ELASTIC_STACK_VERSION=7.current ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
+    - env: INTEGRATION=true SNAPSHOT=true LOG_LEVEL=info ELASTIC_STACK_VERSION=8.current ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true
