--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ jobs:
     - env: INTEGRATION=true SNAPSHOT=true LOG_LEVEL=info ELASTIC_STACK_VERSION=8.previous
     - env: INTEGRATION=true SNAPSHOT=true LOG_LEVEL=info ELASTIC_STACK_VERSION=8.current
     - env: INTEGRATION=true SNAPSHOT=true LOG_LEVEL=info ELASTIC_STACK_VERSION=8.next
-    - env: INTEGRATION=true SNAPSHOT=true LOG_LEVEL=info ELASTIC_STACK_VERSION=8.future
+    - env: INTEGRATION=true SNAPSHOT=false LOG_LEVEL=info ELASTIC_STACK_VERSION=9.current
+    - env: INTEGRATION=true SNAPSHOT=true LOG_LEVEL=info ELASTIC_STACK_VERSION=9.next
     - env: INTEGRATION=true SNAPSHOT=true ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true LOG_LEVEL=info ELASTIC_STACK_VERSION=7.current
     - env: INTEGRATION=true SNAPSHOT=true ELASTIC_PASSWORD=password ELASTIC_SECURITY_ENABLED=true LOG_LEVEL=info ELASTIC_STACK_VERSION=8.current
     - stage: "Secure Integration Tests"
